--- a/index.html
+++ b/index.html
@@ -97,12 +97,14 @@
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/DungeonGallery1.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-1.jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/gallery/gallery-1.jpg" title="Gallery 1" class="glightbox preview-link"></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
-
+          <div class="col-xl-9 col-lg-9 col-md-9">
+            <h2>Introduction</h2>
+            <p></p>
+          </div>
         </div>
 
       </div>
