--- a/classmates.html
+++ b/classmates.html
@@ -47,7 +47,7 @@
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <i class="bi bi-camera"></i>
-        <h1>Home</h1>
+        <h1>Classmates</h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -86,43 +86,9 @@
     </div>
   </section><!-- End Hero Section -->
 
-  <main id="main" data-aos="fade" data-aos-delay="1500">
-
-    <!-- ======= Body with a small introduction ======= -->
-    <section id="gallery" class="gallery">
-      <div class="container-fluid">
-
-        <div class="row gy-4 justify-content-right">
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/gallery/DungeonGallery1.png" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-1.jpg" title="Gallery 1" class="glightbox preview-link"></a>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-9 col-lg-9 col-md-9">
-            <h2>Introduction</h2>
-            <div class="col-md-6 justify-center">
-              <p>
-                I am currently training under Centriq's extensive and focused training program. Here, I have gone form
-                working simple retail and food industry jobs to being on my way to a brighter, beneficial, and secure future!
-              </p>
-            </div>
-          </div>
-          <div class="row gy-4 justify-content-left">
-            <div class="col-xl-3 col-lg-4 col-md-6">
-              <div class="gallery-item h-100">
-                
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Gallery Section -->
-
-  </main><!-- End #main -->
+  <main>
+    
+  </main>
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
