--- a/services.html
+++ b/services.html
@@ -46,8 +46,8 @@
       <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <i class="bi bi-camera"></i>
-        <h1>Classmates</h1>
+        <i class="bi bi-house"></i>
+        <h1>Home</h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -74,12 +74,13 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
+  <!-- ======= Hero Section ======= -->
   <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade" data-aos-delay="1500">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2><span>Classmates</span></h2>
-          <p>The people of various backgrounds and experience from whom I received help and in return helped</p>
+          <h2><span>Services</span></h2>
+          <p>Here's what I have to offer</p>
         </div>
       </div>
     </div>
