--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <i class="bi bi-camera"></i>
+        <i class="bi bi-house-add-fill"></i>
         <h1>Home</h1>
       </a>
 
@@ -92,33 +92,26 @@
     <section id="gallery" class="gallery">
       <div class="container-fluid">
 
-        <div class="row gy-4 justify-content-right">
-          <div class="col-xl-3 col-lg-4 col-md-6">
+        <div class="row gy-4 justify-content-center">
+          <div class="col-xl-6 col-lg-6 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/gallery/DungeonGallery1.png" class="img-fluid" alt="">
+              <img src="assets/img/gallery/DungeonGallery1.png" class="img-fluid" alt="Image">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-1.jpg" title="Gallery 1" class="glightbox preview-link"></a>
+                <a href="assets/img/gallery/gallery-1.jpg" title="DungeonGallery1" class="glightbox preview-link"></a>
+                <p>Dungeon Application</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
-          <div class="col-xl-9 col-lg-9 col-md-9">
+          <div class="col-xl-6 col-lg-6 col-md-6 d-flex align-items-center">
+            <div class="gallery-content">
             <h2>Introduction</h2>
-            <div class="col-md-6 justify-center">
               <p>
                 I am currently training under Centriq's extensive and focused training program. Here, I have gone form
                 working simple retail and food industry jobs to being on my way to a brighter, beneficial, and secure future!
               </p>
             </div>
           </div>
-          <div class="row gy-4 justify-content-left">
-            <div class="col-xl-3 col-lg-4 col-md-6">
-              <div class="gallery-item h-100">
-                
-              </div>
-            </div>
-          </div>
         </div>
-
       </div>
     </section><!-- End Gallery Section -->
 
