--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
       <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <i class="bi bi-camera"></i>
+        <i class="bi bi-house"></i>
         <h1>Home</h1>
       </a>
 
@@ -74,20 +74,26 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
+  <!-- ======= Hero Section ======= -->
   <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade" data-aos-delay="1500">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2>I'm <span>Andrew Cocroft</span> and this is the website I made!</h2>
-          <p>This website was proudly made under the tutelage of Centriq.</p>
-          <a href="contact.html" class="btn-get-started">Available for hire</a>
+          <h2><span>Portfolio</span></h2>
+          <p>A collection of projects undertaken in HTML5/CSS and C#</p>
         </div>
       </div>
     </div>
   </section><!-- End Hero Section -->
 
   <main>
-    
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-6 text-center">
+          <h2>UNDER CONSTRUCTION</h2>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- ======= Footer ======= -->
