--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <i class="bi bi-house"></i>
+        <i class="bi bi-house-add-fill"></i>
         <h1>Home</h1>
       </a>
 
@@ -74,27 +74,48 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <!-- ======= Hero Section ======= -->
   <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade" data-aos-delay="1500">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2><span>Services</span></h2>
-          <p>Here's what I have to offer</p>
+          <h2>I'm <span>Andrew Cocroft</span> and this is the website I made!</h2>
+          <p>This website was proudly made under the tutelage of Centriq.</p>
+          <a href="contact.html" class="btn-get-started">Available for hire</a>
         </div>
       </div>
     </div>
   </section><!-- End Hero Section -->
 
-  <main>
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-6 text-center">
-          <h2>UNDER CONSTRUCTION</h2>
+  <main id="main" data-aos="fade" data-aos-delay="1500">
+
+    <!-- ======= Body with a small introduction ======= -->
+    <section id="gallery" class="gallery">
+      <div class="container-fluid">
+
+        <div class="row gy-4 justify-content-center">
+          <div class="col-xl-6 col-lg-6 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/gallery/DungeonGallery1.png" class="img-fluid" alt="Image">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/gallery-1.jpg" title="DungeonGallery1" class="glightbox preview-link"></a>
+                <p>Dungeon Application</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-6 col-lg-6 col-md-6 d-flex align-items-center">
+            <div class="gallery-content">
+            <h2>Introduction</h2>
+              <p>
+                I am currently training under Centriq's extensive and focused training program. Here, I have gone form
+                working simple retail and food industry jobs to being on my way to a brighter, beneficial, and secure future!
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </main>
+    </section><!-- End Gallery Section -->
+
+  </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
