--- a/resume.html
+++ b/resume.html
@@ -89,8 +89,23 @@
   <main>
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-6 text-center">
-          <h2>UNDER CONSTRUCTION</h2>
+        <div class="col-lg-9 text-center">
+          <h2>Download my Resume</h2>
+          <a href="/assets/Andrew's Resume.pdf" download>
+            <div class="container-fluid">
+
+              <div class="row gy-4 justify-content-center">
+                <div class="col-xl-6 col-lg-6 col-md-6">
+                  <div class="gallery-item h-100">
+                    <img src="assets/img/gallery/ResumeFinal.png" class="img-fluid" alt="Resume">
+                    <div class="gallery-links d-flex align-items-center justify-content-center">
+                      <a href="assets/img/gallery/ResumeFinal.png" title="Resume" class="glightbox preview-link"></a>
+                      <p>Click image to download</p>
+                    </div>
+                  </div>
+                </div><!-- End Gallery Item -->
+            </div>
+          </a>
         </div>
       </div>
     </div>
