--- a/classmates.html
+++ b/classmates.html
@@ -86,13 +86,63 @@
   </section><!-- End Hero Section -->
 
   <main>
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-6 text-center">
-          <h2>UNDER CONSTRUCTION</h2>
+       <!-- ======= Gallery Section ======= -->
+       <section id="gallery" class="gallery">
+        <div class="container-fluid">
+  
+          <div class="row gy-4 justify-content-center">
+            <div class="col-xl-3 col-lg-4 col-md-6">
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/rob.jpg" class="img-fluid" alt="Robert Ritter">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <a href="assets/img/gallery/gallery-1.jpg" title="Gallery 1" class="glightbox preview-link"></a>
+                </div>
+              </div>
+            </div><!-- End Gallery Item -->
+            <div class="col-xl-3 col-lg-4 col-md-6">
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/cody.jpg" class="img-fluid" alt="">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <a href="assets/img/gallery/gallery-2.jpg" title="Gallery 2" class="glightbox preview-link"></a>
+                </div>
+              </div>
+            </div><!-- End Gallery Item -->
+            <div class="col-xl-3 col-lg-4 col-md-6">
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/darron.jpg" class="img-fluid" alt="">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <a href="assets/img/gallery/gallery-3.jpg" title="Gallery 3" class="glightbox preview-link"></a>
+                </div>
+              </div>
+            </div><!-- End Gallery Item -->
+            <div class="col-xl-3 col-lg-4 col-md-6">
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/jace.png" class="img-fluid" alt="">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <a href="assets/img/gallery/gallery-4.jpg" title="Gallery 4" class="glightbox preview-link"></a>
+                </div>
+              </div>
+            </div><!-- End Gallery Item -->
+            <div class="col-xl-3 col-lg-4 col-md-6">
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/kyle.jpg" class="img-fluid" alt="">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <a href="assets/img/gallery/gallery-5.jpg" title="Gallery 5" class="glightbox preview-link"></a>
+                </div>
+              </div>
+            </div><!-- End Gallery Item -->
+            <div class="col-xl-3 col-lg-4 col-md-6">
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/nicholas.jpg" class="img-fluid" alt="">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <a href="assets/img/gallery/gallery-6.jpg" title="Gallery 6" ></a>
+                </div>
+              </div>
+  
+          </div>
+  
         </div>
-      </div>
-    </div>
+      </section><!-- End Gallery Section -->
   </main>
 
   <!-- ======= Footer ======= -->
