--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
       <div class="container-fluid">
 
         <div class="row gy-4 justify-content-center">
-          <div class="col-xl-6 col-lg-6 col-md-6">
+          <div class="col-xl-4 col-lg-4 col-md-4">
             <div class="gallery-item h-100">
-              <img src="assets/img/gallery/DungeonGallery1.png" class="img-fluid" alt="Image">
+              <img src="assets/img/gallery/Andrew.jpg" class="img-fluid" alt="Image">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-1.jpg" title="DungeonGallery1" class="glightbox preview-link"></a>
                 <p>Dungeon Application</p>
