--- a/portfolio.html
+++ b/portfolio.html
@@ -87,13 +87,43 @@
   </section><!-- End Hero Section -->
 
   <main>
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-6 text-center">
-          <h2>UNDER CONSTRUCTION</h2>
+    <section id="gallery" class="gallery">
+      <div class="container-fluid">
+
+        <div class="row gy-4 justify-content-center">
+          <div class="col-xl-4 col-lg-4 col-md-4">
+            <div class="gallery-item h-100">
+              <img src="assets/img/gallery/BankGallery.png" class="img-fluid" alt="Image">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/gallery-1.jpg" title="DungeonGallery1" class="glightbox preview-link"></a>
+                <p>Simple bank console done in C#</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="row gy-4 justify-content-center">
+            <div class="col-xl-4 col-lg-4 col-md-4">
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/DungeonGallery1.png" class="img-fluid" alt="Dungeon">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <a href="assets/img/gallery/gallery-1.jpg" title="DungeonGallery1" class="glightbox preview-link"></a>
+                  <p>Dungeon Application in C#</p>
+                </div>
+              </div>
+            </div><!-- End Gallery Item -->
+          </div><!-- End Gallery Item -->
+          <div class="row gy-4 justify-content-center">
+            <div class="col-xl-4 col-lg-4 col-md-4">
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/ATMGallery.png" class="img-fluid" alt="ATM">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <a href="assets/img/gallery/gallery-1.jpg" title="ATMGallery" class="glightbox preview-link"></a>
+                  <p>Simple ATM function in C#</p>
+                </div>
+              </div>
+            </div><!-- End Gallery Item -->
         </div>
       </div>
-    </div>
+    </section><!-- End Gallery Section -->
   </main>
 
   <!-- ======= Footer ======= -->
