--- a/classmates.html
+++ b/classmates.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PhotoFolio Bootstrap Template - Index</title>
+  <title>Andrew's personal website - Classmates</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,7 +46,7 @@
       <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <i class="bi bi-camera"></i>
+        <i class="bi bi-house"></i>
         <h1>Classmates</h1>
       </a>
 
@@ -90,57 +90,70 @@
        <section id="gallery" class="gallery">
         <div class="container-fluid">
   
-          <div class="row gy-4 justify-content-center">
-            <div class="col-xl-3 col-lg-4 col-md-6">
+          <div class="row gy-4">
+            <div class="col-md-3 col-lg-4 col-md-6 p-3">
+              <h2>Robert Ritter</h2>
               <div class="gallery-item h-100">
                 <img src="assets/img/gallery/rob.jpg" class="img-fluid" alt="Robert Ritter">
                 <div class="gallery-links d-flex align-items-center justify-content-center">
-                  <a href="assets/img/gallery/gallery-1.jpg" title="Gallery 1" class="glightbox preview-link"></a>
+                  <a href="http://ritterhaus.net">Website</a>
                 </div>
               </div>
             </div><!-- End Gallery Item -->
-            <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="col-md-3 col-lg-4 col-md-6 p-3">
+              <h2>Cody Slivinski</h2>
               <div class="gallery-item h-100">
-                <img src="assets/img/gallery/cody.jpg" class="img-fluid" alt="">
+                <img src="assets/img/gallery/cody.jpg" class="img-fluid" alt="Cody Slivinski">
                 <div class="gallery-links d-flex align-items-center justify-content-center">
-                  <a href="assets/img/gallery/gallery-2.jpg" title="Gallery 2" class="glightbox preview-link"></a>
+                  <a href="http://codyslivinski.com">Website</a>
                 </div>
               </div>
             </div><!-- End Gallery Item -->
-            <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="col-md-3 col-lg-4 col-md-6 p-3">
+              <h2>Darron Wentz</h2>
               <div class="gallery-item h-100">
-                <img src="assets/img/gallery/darron.jpg" class="img-fluid" alt="">
+                <img src="assets/img/gallery/darron.jpg" class="img-fluid" alt="Darron Wentz">
                 <div class="gallery-links d-flex align-items-center justify-content-center">
-                  <a href="assets/img/gallery/gallery-3.jpg" title="Gallery 3" class="glightbox preview-link"></a>
+                  <a href="assets/img/gallery/gallery-3.jpg" title="Gallery 3" class="glightbox preview-link">
+                    <a href="http://werntzdomain.com">Website</a>
+                  </a>
                 </div>
               </div>
             </div><!-- End Gallery Item -->
-            <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="col-md-3 col-lg-4 col-md-6 p-3">
+              <h2>Jace Cockrell</h2>
               <div class="gallery-item h-100">
-                <img src="assets/img/gallery/jace.png" class="img-fluid" alt="">
+                <img src="assets/img/gallery/jace.png" class="img-fluid" alt="Jace Cockrell">
                 <div class="gallery-links d-flex align-items-center justify-content-center">
-                  <a href="assets/img/gallery/gallery-4.jpg" title="Gallery 4" class="glightbox preview-link"></a>
+                  <a href="assets/img/gallery/gallery-4.jpg" title="Gallery 4" class="glightbox preview-link">
+                    <a href="http://jacecockrell.com">Website</a>
+                  </a>
                 </div>
               </div>
             </div><!-- End Gallery Item -->
-            <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="col-md-3 col-lg-4 col-md-6 p-3">
+              <h2>Kyle Gough</h2>
               <div class="gallery-item h-100">
-                <img src="assets/img/gallery/kyle.jpg" class="img-fluid" alt="">
+                <img src="assets/img/gallery/kyle.jpg" class="img-fluid" alt="Kyle Gough">
                 <div class="gallery-links d-flex align-items-center justify-content-center">
-                  <a href="assets/img/gallery/gallery-5.jpg" title="Gallery 5" class="glightbox preview-link"></a>
+                  <a href="assets/img/gallery/gallery-5.jpg" title="Gallery 5" class="glightbox preview-link">
+                    <a href="http://goughkyle.com">Website</a>
+                  </a>
                 </div>
               </div>
             </div><!-- End Gallery Item -->
-            <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="col-md-3 col-lg-4 col-md-6 p-3">
+              <h2>Nicholas Davolt</h2>
               <div class="gallery-item h-100">
-                <img src="assets/img/gallery/nicholas.jpg" class="img-fluid" alt="">
+                <img src="assets/img/gallery/nicholas.jpg" class="img-fluid" alt="Nicholas Davolt">
                 <div class="gallery-links d-flex align-items-center justify-content-center">
-                  <a href="assets/img/gallery/gallery-6.jpg" title="Gallery 6" ></a>
+                  <a href="assets/img/gallery/gallery-6.jpg" title="Gallery 6">
+                    <a href="http://nicholasdavolt.com/">Website</a>
+                  </a>
                 </div>
               </div>
-  
+            </div> <!-- End Gallery Item -->
           </div>
-  
         </div>
       </section><!-- End Gallery Section -->
   </main>
