--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PhotoFolio Bootstrap Template - Index</title>
+  <title>Andrew's personal website</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,7 +46,7 @@
       <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <i class="bi bi-house-add-fill"></i>
+        <i class="bi bi-house-fill"></i>
         <h1>Home</h1>
       </a>
 
@@ -97,8 +97,8 @@
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/Andrew.jpg" class="img-fluid" alt="Image">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-1.jpg" title="DungeonGallery1" class="glightbox preview-link"></a>
-                <p>Dungeon Application</p>
+                <a href="assets/img/gallery/gallery-1.jpg" title="Andrew" class="glightbox preview-link"></a>
+                <p>Andrew Cocroft</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -107,7 +107,19 @@
             <h2>Introduction</h2>
               <p>
                 I am currently training under Centriq's extensive and focused training program. Here, I have gone form
-                working simple retail and food industry jobs to being on my way to a brighter, beneficial, and secure future!
+                working simple retail and food industry jobs to being on my way to a brighter, beneficial, and successful future!
+              </p>
+              <h2>About</h2>
+              <p>
+                For nine years, I had been limited in terms of success and security through my work history in retail, warehousing,
+                and the food industry, and while it was great to meet all the people I did and go to the places I've been, I felt
+                it was time for a change. That's why I decided to wed my enthusiasm for software and tech as a means of breaking past
+                my boundaries, and making something better of myself.
+                <br>
+                <br>
+                I consider myself to be a dedicated and hard worker, willing to push the limits to deliver the best results
+                as fast as possible. I ask a lot of questions and I'm not afraid to reach out for help, but I generally work
+                my best alone.
               </p>
             </div>
           </div>
