--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PhotoFolio Bootstrap Template - Index</title>
+  <title>Andrew's personal website - Resume</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -90,22 +90,20 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-9 text-center">
-          <h2>Download my Resume</h2>
-          <a href="/assets/Andrew's Resume.pdf" download>
             <div class="container-fluid">
-
               <div class="row gy-4 justify-content-center">
                 <div class="col-xl-6 col-lg-6 col-md-6">
                   <div class="gallery-item h-100">
-                    <img src="assets/img/gallery/ResumeFinal.png" class="img-fluid" alt="Resume">
+                    <img src="assets/img/gallery/ResumeFinal.png" class="img-fluid" alt="image">
                     <div class="gallery-links d-flex align-items-center justify-content-center">
-                      <a href="assets/img/gallery/ResumeFinal.png" title="Resume" class="glightbox preview-link"></a>
-                      <p>Click image to download</p>
+                      <a href="assets/img/gallery/gallery-1.jpg" title="Resume" class="glightbox preview-link"></a>
+                      <a href="/assets/Andrew's Resume.pdf" download>
+                        <p>Click here to download</p>
+                      </a>
                     </div>
                   </div>
                 </div><!-- End Gallery Item -->
             </div>
-          </a>
         </div>
       </div>
     </div>
