--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PhotoFolio Bootstrap Template - Index</title>
+  <title>Andrew's personal website - Contact</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -82,6 +82,17 @@
           <h2><span>Contact</span></h2>
           <p>FORM CURRENTLY NOT FUNCTIONAL! Please refer to my email or send me a message on Linkedin!</p>
         </div>
+        <div class="row mt-5 justify-content-around">
+          <div class="email col-md-2">
+            <h2>Email</h2>
+            <p>email.example@domain.com</p>
+        </div>
+        <div class="row mt-5 justify-content-around">
+          <div class="phone col-md-2">
+            <h2>Phone</h2>
+            <p>+1-555-555-5555</p>
+          </div>
+        </div>
       </div>
     </div>
   </section><!-- End Hero Section -->
@@ -93,7 +104,7 @@
           <form action="action_page.php">
         
             <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name">
+            <input type="text" id="fname" name="firstname" placeholder="Your first name">
             
             <label for="lname">Last Name</label>
             <input type="text" id="lname" name="lastname" placeholder="Your last name">
