Final changes to static site

--- a/classmates.html
+++ b/classmates.html
@@ -153,6 +153,35 @@
                 </div>
               </div>
             </div> <!-- End Gallery Item -->
+            <div class="col-md-3 col-lg-4 col-md-6 p-3">
+              <h2>Devon Schmidt</h2>
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/devon.jpeg" class="img-fluid" alt="Devon">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <a href="assets/img/gallery/gallery-6.jpg" title="Gallery 6">
+                    <a href="http://devschmidt.com/">Website</a>
+                  </a>
+                </div>
+              </div>
+            </div> <!-- End Gallery Item -->
+            <div class="col-md-3 col-lg-4 col-md-6 p-3">
+              <h2>Jake Nobles</h2>
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/comingsoon.png" class="img-fluid" alt="Jake">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <p>Site to be added</p>
+                </div>
+              </div>
+            </div> <!-- End Gallery Item -->
+            <div class="col-md-3 col-lg-4 col-md-6 p-3">
+              <h2>Kurtis Caldwell</h2>
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/comingsoon.png" class="img-fluid" alt="Kurtis">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <p>Site to be added</p>
+                </div>
+              </div>
+            </div> <!-- End Gallery Item -->
           </div>
         </div>
       </section><!-- End Gallery Section -->
