--- a/contact.html
+++ b/contact.html
@@ -88,17 +88,9 @@
             <p>email.example@domain.com</p>
         </div>
         <div class="row mt-5 justify-content-around">
-          <div class="phone col-md-2">
-            <h2>Phone</h2>
-            <p>+1-555-555-5555</p>
-          </div>
-        </div>
-        <div class="row mt-5 justify-content-around">
           <div class="linkedin col-md-2">
-            <h2>Linkedin
-              <p>
-                <a href="https://www.linkedin.com/in/andrew-cocroft-4a2952275/">linkedin.com/in/andrew-cocroft</a>
-              </p>
+            <h2>
+              <a href="https://www.linkedin.com/in/andrew-cocroft-4a2952275/">LinkedIn</a>
             </h2>
           </div>
         </div>
