--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,9 @@
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
           <h2><span>Portfolio</span></h2>
-          <p>A collection of projects undertaken in HTML5/CSS and C#</p>
+          <p>A collection of projects undertaken in HTML5/CSS and C# 
+            <br>(see github below for more)
+          </p>
         </div>
       </div>
     </div>
@@ -89,17 +91,6 @@
   <main>
     <section id="gallery" class="gallery">
       <div class="container-fluid">
-
-        <div class="row gy-4 justify-content-center">
-          <div class="col-xl-4 col-lg-4 col-md-4">
-            <div class="gallery-item h-100">
-              <img src="assets/img/gallery/BankGallery.png" class="img-fluid" alt="Image">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-1.jpg" title="DungeonGallery1" class="glightbox preview-link"></a>
-                <p>Simple bank console done in C#</p>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
           <div class="row gy-4 justify-content-center">
             <div class="col-xl-4 col-lg-4 col-md-4">
               <div class="gallery-item h-100">
@@ -110,17 +101,53 @@
                 </div>
               </div>
             </div><!-- End Gallery Item -->
-          </div><!-- End Gallery Item -->
           <div class="row gy-4 justify-content-center">
             <div class="col-xl-4 col-lg-4 col-md-4">
               <div class="gallery-item h-100">
-                <img src="assets/img/gallery/ATMGallery.png" class="img-fluid" alt="ATM">
+                <img src="assets/img/gallery/comingsoon.png" class="img-fluid" alt="WIP">
                 <div class="gallery-links d-flex align-items-center justify-content-center">
                   <a href="assets/img/gallery/gallery-1.jpg" title="ATMGallery" class="glightbox preview-link"></a>
-                  <p>Simple ATM function in C#</p>
+                  <p>StoreFront Database (SQL)</p>
                 </div>
               </div>
             </div><!-- End Gallery Item -->
+          <div class="row gy-4 justify-content-center">
+            <div class="col-xl-4 col-lg-4 col-md-4">
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/comingsoon.png" class="img-fluid" alt="WIP">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <a href="assets/img/gallery/gallery-1.jpg" title="ATMGallery" class="glightbox preview-link"></a>
+                  <p>StoreFront MVC (.NET MVC)</p>
+                </div>
+              </div>
+            </div><!-- End Gallery Item -->
+          <div class="row gy-4 justify-content-center">
+            <div class="col-xl-4 col-lg-4 col-md-4">
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/comingsoon.png" class="img-fluid" alt="WIP">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <a href="assets/img/gallery/gallery-1.jpg" title="ATMGallery" class="glightbox preview-link"></a>
+                  <p>Web API</p>
+                </div>
+              </div>
+            </div><!-- End Gallery Item -->
+          <div class="row gy-4 justify-content-center">
+            <div class="col-xl-4 col-lg-4 col-md-4">
+              <div class="gallery-item h-100">
+                <img src="assets/img/gallery/comingsoon.png" class="img-fluid" alt="WIP">
+                <div class="gallery-links d-flex align-items-center justify-content-center">
+                  <a href="assets/img/gallery/gallery-1.jpg" title="ATMGallery" class="glightbox preview-link"></a>
+                  <p>JavaScript Development</p>
+                </div>
+              </div>
+            </div><!-- End Gallery Item -->
+            <div class="row gy-4 justify-content-center">
+              <div class="col-lg-6 text-center">
+                <h4>
+                    <a href="https://github.com/ACocroft">GitHub</a>
+                </h4>
+              </div>
+            </div>
         </div>
       </div>
     </section><!-- End Gallery Section -->
