--- a/services.html
+++ b/services.html
@@ -90,7 +90,26 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2>UNDER CONSTRUCTION</h2>
+          <p> While I'm not officially in the bizz just yet, I've learned so much during my
+            time in Centriq. Here's just a bit of what I've already learned, and what's ahead
+            for me!
+            <ul>
+              <li> User Interface in HTML5 and CSS </li>
+              <li> Programming in C#</li>
+              <li> Creating Repos and tracking changes using Source Control</li>
+              <li> User Experience in JavaScript</li>
+              <li> Management of Data</li>
+            </ul>
+            <p> All with the utilization and the learning of these programs:
+              <ul>
+                <li>Microsoft Visual Studio Code 2022</li>
+                <li>Microsoft Visual Studio 2022</li>
+                <li>Microsoft SQL Server Management Studio</li>
+              </ul>
+            </p>
+            <br>
+          </p>
+          <p>And that's all in only over a month of education!</p>
         </div>
       </div>
     </div>
